Edited wiki page ModelDecayFunctions through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2327 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelDecayFunctions.wiki
+++ b/wiki/ModelDecayFunctions.wiki
@@ -27,7 +27,7 @@ http://openmalaria.googlecode.com/svn/wiki/graphs/decay-functions.png
 
 == Configuration ==
 
-For certain interventions, the decay of efficacy is described by an XML element of type `DecayFunction`, or by an element of type `DecayFunctionValue` which includes an initial value.  An example of this element type for "eltName":
+For certain interventions, the decay of efficacy is described by an XML element of type `DecayFunction`, or by an element of type `DecayFunctionValue` which includes an initial value.  An example both element types used to specifiy "eltName" follows:
 
 {{{
 <eltName L="10.0" function="exponential"/>
