--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -12,8 +12,8 @@ The monitoring system is described [Monitoring here] and within the [XmlScenario
 
 === Special output values ===
 
-Some outputs are the result of averaging some measure over simulated individuals for a specified period or time point. If the denominator number of individuals is zero there is no valid value, so an output value of "nan" (or "-nan" or similar, short for Not A Number) is given.
-To make detection of computation errors easier, we try to avoid outputting nan values in survey outputs. (The same is not true for continuous outputs: several of these may output nan values at the beginning of the simulation or other times.)
+Some outputs are the result of averaging a measure over simulated individuals for a specified duration. If the denominator number of individuals in this average is zero, the resulting value isn't valid, so an output value of *nan* (or "-nan" - short for Not A Number) is reported.
+To make detection of computation errors easier, we try to avoid outputting *nan* values in discrete survey outputs. The same is not true for continuous outputs: several of these may output *nan* values at the beginning of the simulation or other times.
 
 For the drug costing measures no value is listed at all for drugs never prescribed since the last survey.
 
@@ -21,7 +21,7 @@ For the drug costing measures no value is listed at all for drugs never prescrib
 
 The units we generally use for EIR are _entomological inoculations per time period as measured in adults_ where the time period may be days, years, or the model's time step (currently 1 or 5 days).
 
-Since children are smaller than adults our model assumes they are less likely to be bitten by mosquitoes. Since EIR only tends to be measured in adults, we try to make our units equivalent, either by only considering bites in adults or by dividing by the mean availability of people in the population compared to an adult (this mean relative availability is the "human availability" output available in continuous-reporting mode).
+Since children are smaller than adults our model assumes they are less likely to be bitten by mosquitoes. However, most information we have on EIR tends to be measured in adults. We try to make our units equivalent, either by only considering bites in adults or by scaling the mean availability of all people in the population compared to an adult (this mean relative availability is the "human availability" output available in continuous-reporting mode).
 
 == Continuous measures ==
 
