--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-The main input to the simulator is an [http://www.w3schools.com/xml/default.asp XML] file generally called `scenario.xml` (though it may be named something different if the `--scenario FILE` command-line option is passed to openmalaria). This has several sections, described here.   The file contents are described in a more technical (and probably more complete) way by the [http://www.w3schools.com/schema/default.asp XSD] schema [http://code.google.com/p/openmalaria/source/browse/trunk/schema/scenario.xsd file].
+The main input to the simulator is an [http://www.w3schools.com/xml/default.asp XML] file generally called `scenario.xml` (though it may be named something different if the `--scenario FILE` command-line option is passed to openmalaria). The XML files has several sections, described here.   If you are new to XML, there is a nice tutorial of the XSD schema  [http://www.w3schools.com/schema/default.asp here and [http://code.google.com/p/openmalaria/source/browse/trunk/schema/scenario.xsd file].
 
 
 == Scope of documentation ==
