Edited wiki page Terminology through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2335 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Terminology.wiki
+++ b/wiki/Terminology.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-We provide here a glossary of terms used in the project, sometimes with special meanings.
+The terminology we use for *openmalaria* project is very specific. A quick browse through the glossary below is recommended.
 
 
 = Glossary =
