Edited wiki page UnixBuildOpenMalaria through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2337 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/UnixBuildOpenMalaria.wiki
+++ b/wiki/UnixBuildOpenMalaria.wiki
@@ -1,4 +1,4 @@
-#summary brief instructions for building openmalaria
+#summary Brief instructions for building *openmalaria*
 
 = Building openmalaria =
 
